--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@element-plus/nuxt": "^1.1.4",
+    "@nuxtjs/i18n": "^10.2.1",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@pinia/nuxt": "^0.11.2",
     "element-plus": "^2.11.4",
